# webserver

./: CMakeLists.txt  Client.h  FunctionRequest.h  ProxyClient.cpp  ProxyClient.h  ServerEpoll.cpp  ServerEpoll.h  UrlKey.cpp  UrlKey.h  classes.h  client.cpp  client.h  epoll.cpp  epoll.h  filemanager.cpp  filemanager.h  http.cpp  http.h  main.cpp  main.h  server.cpp  server.h
recourse/: index.html  notFound.html
resourse/: MethodNotAllowed.html  forbidden.html
